--- a/Flux_Calibration/PaperLatex_ML/NeuralNetwork.tex
+++ b/Flux_Calibration/PaperLatex_ML/NeuralNetwork.tex
@@ -609,7 +609,41 @@ The same data can be visualized in a 3D environment, where the overall deformati
   \caption{Trajectory plot  for the potential combination of [0.078,0.198,.0.006,0.0]. The 3D data corresponds to the FE solution, and the point trajectory to the predicted displacement of point 1 using the best performing neural network architecture.}\label{fig:}
 \end{figure}
 
+\begin{figure}
+  \centering
+  \subfloat[Frame 1]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_003_027_03_FRAME1.png}}
+  \subfloat[Frame 2]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_003_027_03_FRAME2.png}}\\
+  \subfloat[Frame 3]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_003_027_03_FRAME3.png}}
+  \subfloat[Frame 4]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_003_027_03_FRAME4.png}}
+  \caption{Trajectory plot  for the potential combination of [0.006,0.03,.0.27,0.3]. The 3D data corresponds to the FE solution, and the point trajectory to the predicted displacement of point 1 using the best performing neural network architecture.}\label{fig:}
+\end{figure}
 
+\begin{figure}
+  \centering
+  \subfloat[Frame 1]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_03_015_0282_FRAME1.png}}
+  \subfloat[Frame 2]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_03_015_0282_FRAME2.png}}\\
+  \subfloat[Frame 3]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_03_015_0282_FRAME3.png}}
+  \subfloat[Frame 4]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0006_03_015_0282_FRAME4.png}}
+  \caption{Trajectory plot  for the potential combination of [0.006,0.3,.0.15,0.282]. The 3D data corresponds to the FE solution, and the point trajectory to the predicted displacement of point 1 using the best performing neural network architecture.}\label{fig:}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \subfloat[Frame 1]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0078_03_0138_0006_FRAME1.png}}
+  \subfloat[Frame 2]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0078_03_0138_0006_FRAME2.png}}\\
+  \subfloat[Frame 3]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0078_03_0138_0006_FRAME3.png}}
+  \subfloat[Frame 4]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_0078_03_0138_0006_FRAME4.png}}
+  \caption{Trajectory plot  for the potential combination of [0.078,0.3,.0.138,0.006]. The 3D data corresponds to the FE solution, and the point trajectory to the predicted displacement of point 1 using the best performing neural network architecture.}\label{fig:}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \subfloat[Frame 1]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_027_00_015_0162_FRAME1.png}}
+  \subfloat[Frame 2]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_027_00_015_0162_FRAME2.png}}\\
+  \subfloat[Frame 3]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_027_00_015_0162_FRAME3.png}}
+  \subfloat[Frame 4]{\includegraphics[width=0.5\linewidth]{Figures/NeuralNetworkStudy/Paraview_027_00_015_0162_FRAME4.png}}
+  \caption{Trajectory plot  for the potential combination of [0.27,0.0,.0.15,0.162]. The 3D data corresponds to the FE solution, and the point trajectory to the predicted displacement of point 1 using the best performing neural network architecture.}\label{fig:}
+\end{figure}
 
 
 \subsection{Second example: 20-electrode dielectric elastomer}
